# nfa

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config-default.ini  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: linter.yml
