[project]
name = "nfa"
version = "0.1.0"
description = "nfstream for Arkime"
readme = "README.md"
requires-python = ">=3.11.9,<3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi[all]>=0.117.1",
    "nfstream>=5.1.0",
    "pydantic-settings>=2.11.0",
    "pylint>=3.3.8",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]
target-version = "py311"
lint.select = [
    "PL",   # Pylint
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific
]
lint.ignore = [
    "E501",  # line too long, handled by black
]
fix = true
line-length = 119

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention="google"
